# zhouyi

./: .gitignore  CLAUDE.md  README.md  eframe_template.js  eframe_template_bg.wasm  index.html  spider_zhouyi.py  zhouyi.py  zhouyi_ui.js  周易卦象信息.json
.github/workflows/: apisec-scan.yml  pages.yml  rust.yml
core.rs/: Cargo.toml  headname_youset.h  pyproject.toml  test_gua.rs
core.rs/src/: NewStructuredRustJson_RawText.json  Structured_Zhouyi.json  Structured_Zhouyi_2_temp.json  ZhouyiFull.json  divination.rs  explain_gua.rs  generate_json.rs  model.rs  parse_txt.py  print_gua_map.rs  raw_zhouyi.txt  test_gua_order.rs  test_gua_print.rs
docs/assets/: sw.js
noyi-zhouyi/: ionic.config.json  package-lock.json  package.json
noyi-zhouyi/src/: main.ts
noyi-zhouyi/src/app/tab1/: tab1.page.html
scripts/: generate_gua_data.js
user_management/: Cargo.toml
user_management/src/: container_wrapper.rs  db_management.rs  formats.rs  initial_db.rs  main.rs  rocket.rs
user_management/src/migrator/: m20230903_000001_create_account_table.rs  m20230903_000002_create_record_table.rs  mod.rs
zhouyi-miniprogram/: app.js  app.json  app.wxss  project.config.json  project.private.config.json
zhouyi-miniprogram/pages/index/: index.js  index.wxml  index.wxss
zhouyi-miniprogram/pages/question/: question.js  question.wxml  question.wxss
zhouyi-miniprogram/pages/result/: result.js  result.wxml  result.wxss
zhouyi-miniprogram/utils/: ZhouyiFull.json  divination.js  generate_gua_data.js  gua_data.js  gua_data_new.js  shareImage.js
zhouyi_ui/: Cargo.toml  Trunk.toml  index.html  run.sh
zhouyi_ui/src/: app.rs  communicate.rs  lib.rs  main.rs
zhouyi_ui/src/app/: communicate.rs
