[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite={version="0.29.0",features=["bundled", "serde_json"]}
serde_json="1.0"
serde={version="1.0",features=["derive"]}
actix-web = "4"

[[bin]]
name = "db"
path = "src/db_management.rs"
test=true
bench=false

