[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite={version="0.29.0",features=["bundled", "serde_json"]}
serde_json="1.0"
serde={version="1.0",features=["derive"]}
rocket={version="=0.5.0-rc.3",features=["json"]}

[dependencies.rocket_sync_db_pools]
# version = "=0.5.0-rc.3"
features = ["diesel_sqlite_pool"]

[[bin]]
name = "db"
path = "src/db_management.rs"
test=true
bench=false

[[bin]]
name = "be"
path = "src/main.rs"
test=true
bench=false