[package]
name = "zhouyi_ui"
version = "0.1.0"
authors = ["Zi Liang <2273067585@qq.com>"]
edition = "2021"
rust-version = "1.65"

[features]
# chrono = ["egui_extras/datepicker", "dep:chrono"]
# js = ["zhouyi_ui/js"]


[dependencies]
getrandom = {version = "0.2.9", feature= ["js"]}
egui = {version="0.22.0"}
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    # "chrono",
] }
log = "0.4"
rfd = "0.11"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipboard = "0.5"

# local lib "zhouyi" in core.rs
zhouyi={path="../core.rs"}

chrono = { version = "0.4"}
# chrono = { version = "0.4", optional=true, features = ["js-sys", "wasmbind"] }
egui_extras = { version = "0.22.0"}

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"



[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
